Wrap input, fix styles

--- a/style/form.css
+++ b/style/form.css
@@ -17,10 +17,7 @@ form ul.block input {
   background: none;
   border: 0;
   color: black;
-  flex: 1;
-  margin: 0 1em 0 0;
-  padding: 0.25em;
-  width: 0;
+  width: 100%;
 }
 
 form ul.block input[disabled] {
@@ -97,6 +94,12 @@ form ul.block .input {
   align-items: center;
   display: flex;
   flex: 1;
+}
+
+form ul.block .input .wrap {
+  flex: 1;
+  margin: 0 1em 0 0;
+  padding: 0.25em;
 }
 
 form ul.block .plain {
